Ajout page appreciation ouvrage  + petits corretcifs
Page ouvrage en semi MVC avec son lot de petites modifications

--- a/view/head.html
+++ b/view/head.html
@@ -28,5 +28,10 @@
         .checked {
             color: orange;
         }
+
+        .ratingDiv {
+            width: 100%;
+            display: flex;
+        }
     </style>
 </head>
