--- a/view/page/bookCardModal.html
+++ b/view/page/bookCardModal.html
@@ -19,10 +19,10 @@
                 <span class="fa fa-child checked"></span>
                 <span class="fa fa-child checked"></span>
                 <span class="fa fa-child"></span></button>
-                <span class="fa fa-child"></span></button>
-            <form action="" method="POST">
-                <input type="submit" class="button" value="Envoyer">
-            </form>
+                <span class="fa fa-child"></span></button>                                   
+            </p>
+            <p>
+                <a href="rating.php?idBook=<?php echo $details['idBook'] ?>" class="btn btn-primary">Evaluer l'ouvrage</a>
             </p>
         </div>
         <div class="modal-footer">
