--- a/view/page/home.html
+++ b/view/page/home.html
@@ -5,12 +5,13 @@
             <h1>Bibliothèque en ligne</h1>
             <p class="lead text-muted">Ce site répertorie des oeuvres littéraires de tous les horizons, des lecteurs passionés et avides de bouquins, ainsi que leurs appréciations.</p>
             <p>
-                <a href="booksList.php" class="btn btn-primary my-2">Liste des ouvrages</a>
-                <?php
-        if(isset($_SESSION["isConnected"]))
-        {
-          echo '<a href="addBook.php" class="btn btn-secondary my-2">Ajouter un ouvrage</a>';
-                }
+                
+                    <a href="<?php echo $buttonPageName ?>" class="btn btn-primary my-2"><?php echo $buttonTitle ?></a>
+                    <?php
+                    if(isset($_SESSION["isConnected"]))
+                    {
+                        echo '<a href="addBook.php" class="btn btn-secondary my-2">Ajouter un ouvrage</a>';
+                    }
                 ?>
             </p>
         </div>
