Add evaluation system + rating stars

--- a/view/head.html
+++ b/view/head.html
@@ -29,9 +29,21 @@
             color: orange;
         }
 
-        .ratingDiv {
-            width: 100%;
-            display: flex;
+        .jumbotron {
+            margin-bottom: 0;
+        }
+
+        .col-md-4 {
+            height: 100%;
+        }
+
+        .list-group {
+            margin-bottom: 2rem;
+        }
+
+        .tab-content {
+            border: solid 1px;
+            margin-bottom: 2rem;
         }
     </style>
 </head>
