Bootstrap page ajout de livre

--- a/view/footer.html
+++ b/view/footer.html
@@ -1,9 +1,8 @@
 </main>
-
 <footer class="text-muted">
     <div class="container">
         <p class="float-right">
-            <a href="#">Back to top</a>
+            <a href="../controller/home.php">Retour à l'accueil</a>
         </p>
     </div>
 </footer>
