--- a/view/page/peutNormalementEtreSupprimee.html
+++ b/view/page/peutNormalementEtreSupprimee.html
@@ -1,63 +1,58 @@
-<main role="main">
-    <section class="jumbotron text-center">
-        <div class="container">
-<div class="card text-left">
-    <div class="card bg-light">
-        <div class="card-header"><h3 class="card-title">Ajouter un livre</h3></div>
+<div class="col-md-4">
+    <div class="card bg-light mb-3">
+        <div class="card-header"><h3 class="card-title">Add a book</h3></div>
             <div class="card-body">
             <form method="post" action="addingBook.php" enctype="multipart/form-data">
                 <div class="form-group">
-                    <label for="title">Titre : </label>
+                    <label for="title">Title : </label>
                     <input class="form-control" type="text" id="title" name="title">
                 </div>
                 <div class="form-group">
-                    <label for="category">Categorie : </label>
+                    <label for="category">Category : </label>
                     <select class="form-control" id="category" name="category">
                         <option value="Choose" selected>Choisir</option>
-                        <option value="book">Livre</option>
+                        <option value="book">Book</option>
                         <option value="comic">Comic</option>
                         <option value="manga">Manga</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="numberPages">Nombre de pages : </label>
+                    <label for="numberPages">Number of pages : </label>
                     <input class="form-control" type="number" id="numberPages" name="numberPages" min="1">
                 </div>
                 <div class="form-group">
-                    <label for="authorName">Prénom de l'auteur : </label>
+                    <label for="authorName">Author's name : </label>
                     <input class="form-control" type="text" id="authorName" name="authorName">
                 </div>
                 <div class="form-group">
-                    <label for="authorSurname">Nom de l'auteur : </label>
+                    <label for="authorSurname">Author's surname : </label>
                     <input class="form-control" type="text" id="authorSurname" name="authorSurname">
                 </div>
                 <div class="form-group">
-                    <label for="editor">Editeur : </label>
+                    <label for="editor">Editor : </label>
                     <input class="form-control" type="text" id="editor" name="editor">
                 </div>
                 <div class="form-group">
-                    <label for="year">Année : </label>
+                    <label for="year">Year : </label>
                     <input type="number" id="year" name="year" max="2020">
                 </div>
                 <div class="form-group">
-                    <label for="picture">Photo de couverture :</label>
+                    <label for="picture">Picture :</label>
                     <input class="form-controll-file" type="file" name="picture" id="picture">
                 </div>
                 <div class="form-group">
-                    <label for="excerpt">Echantillon : </label>
+                    <label for="excerpt">Excerpt : </label>
                     <input class="form-controll-file" type="file" name="excerpt" id="excerpt">
                 </div>
                 <div class="form-group">
-                    <label for="summary">Résumé : </label>
+                    <label for="summary">Summary : </label>
                     <textarea class="form-contro" id="summary" name="summary" rows="4" cols="50" maxlength="200"
                             placeholder="Write a short summary for the book"></textarea>
                 </div>
                 <p>
-                    <input type="submit" name="btnSubmit" value="Ajouter" class="btn btn-primary"/>
+                    <input type="submit" name="btnSubmit" value="Add book" class="btn btn-primary"/>
                 </p>
             </form>
         </div>
     </div>
 </div>
-        </div>
-    </section>
