--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -17,7 +17,6 @@
                         <h3 class="mb-0">Appréciation globale :</h3>
                         <div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5'; } ?></div>
                         <?php displayRatingStars($averageNote); ?>
-                        <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                 </div>
             </div>
@@ -28,24 +27,24 @@
                         <div class="mb-1 text-muted">Nov 12</div>
                         <div class="list-group" id="myList" role="tablist">
                             <?php
-                                if(count($evaluations) > 0)
+                                if(count($selectedEvaluations) > 0)
                                 {
-                                    foreach($evaluations as $evaluation)
+                                    foreach($selectedEvaluations as $evaluation)
                                     {
-                                        echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
+                                        echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#idNumber' . $evaluation["idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
                                     }
                                 }
                                 else
                                 {
-                                    echo 'Aucun commentaire';
+                                    echo 'Aucun commentaires';
                                 }
                             ?>
                         </div>
                         <div class="tab-content no-gutters border rounded">
                             <?php
-                                foreach($evaluations as $evaluation)
+                                foreach($selectedEvaluations as $evaluation)
                                 {
-                                    echo '<div class="tab-pane" id="id' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
+                                    echo '<div class="tab-pane" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
                                 }
                             ?> 
                         </div>
