--- a/view/page/evaluationsListModal.html
+++ b/view/page/evaluationsListModal.html
@@ -8,7 +8,29 @@
                 </button>
             </div>
             <div class="modal-body">
-
+                <div class="list-group" id="myList" role="tablist">
+                    <?php
+                        if(count($evaluations) > 0)
+                        {
+                            foreach($evaluations as $evaluation)
+                            {
+                                echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
+                            }
+                        }
+                        else
+                        {
+                            echo 'Aucune appréciations';
+                        }
+                    ?>
+                </div>
+                <div class="tab-content no-gutters border rounded">
+                    <?php
+                        foreach($evaluations as $evaluation)
+                        {
+                            echo '<div class="tab-pane" id="id' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
+                        }
+                    ?> 
+                </div>
             </div>
         </div>
     </div>
