--- a/view/page/evaluationsListModal.html
+++ b/view/page/evaluationsListModal.html
@@ -27,7 +27,7 @@
                     <?php
                         foreach($evaluations as $evaluation)
                         {
-                            echo '<div class="tab-pane" id="id' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
+                            echo '<div class="tab-pane overflow-auto" id="id' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
                         }
                     ?> 
                 </div>
