--- a/view/head.html
+++ b/view/head.html
@@ -1,30 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Jekyll v4.1.1">
     <title>Bibliothèque d'ouvrages</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-
+ 
+    <!-- Stylesheet for the icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom styles for the website -->
     <style>
-
-        span:hover {
-            color: red;
-        }
-
-        span:visited {
-            color: purple;
-        }
-
         .checked {
             color: orange;
         }
@@ -44,6 +32,11 @@
         .tab-content {
             border: solid 1px;
             margin-bottom: 2rem;
+        }
+
+        img {
+            width: 100%; 
+            height: 300px;
         }
     </style>
 </head>
