--- a/view/page/bookCardModal.html
+++ b/view/page/bookCardModal.html
@@ -8,7 +8,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="" width=100% height=300>
+                <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="Couverture du livre">
                 <p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p>
                 <p class="card-text"> Auteur : <?php echo $findAutName($database->getTable('t_author'), $details['idAuthor']) ?></p>
                 <p class="card-text"> Année : <?php echo $details['booYearEdited'] ?></p>
