--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -3,7 +3,7 @@
         <div class="row mb-2">
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
-                    <img src="../userContent/images/<?php echo $selectedBook["booCoverLink"] ?>" alt="" width=100% height=300>
+                    <img src="../userContent/images/<?php echo $selectedBook["booCoverLink"] ?>" alt="Couverture du livre">
                     <div class="card-body">
                         <p class="card-text"> Titre : <?php echo $selectedBook["booTitle"] ?></p>
                         <p class="card-text"> Auteur : <?php echo findAutName($database->getTable("t_author"), $selectedBook["idAuthor"]) ?></p>
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" height=100%>
+                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0">Appréciation globale :</h3>
                         <div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5'; } ?></div>
@@ -21,10 +21,9 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" height=100%>
+                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0">Commentaires sélectionnés :</h3>
-                        <div class="mb-1 text-muted">Nov 12</div>
                         <div class="list-group" id="myList" role="tablist">
                             <?php
                                 if(count($selectedEvaluations) > 0)
@@ -44,7 +43,7 @@
                             <?php
                                 foreach($selectedEvaluations as $evaluation)
                                 {
-                                    echo '<div class="tab-pane" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
+                                    echo '<div class="tab-pane overflow-auto" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel">' . $evaluation["evaRemark"] . '</div>';
                                 }
                             ?> 
                         </div>
