--- a/view/page/bookCardModal.html
+++ b/view/page/bookCardModal.html
@@ -10,7 +10,7 @@
             <div class="modal-body">
                 <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="Couverture du livre">
                 <p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p>
-                <p class="card-text"> Auteur : <?php echo $findAutName($database->getTable('t_author'), $details['idAuthor']) ?></p>
+                <p class="card-text"> Auteur : <?php echo $findAutName($database->getAuthorById($details['idAuthor'])) ?></p>
                 <p class="card-text"> Année : <?php echo $details['booYearEdited'] ?></p>
                 <p class="card-text"> Nombre de pages : <?php echo $details['booNbrPages'] ?></p>
                 <p class="card-text"> Résumé : <?php echo $details['booSummary'] ?></p>
