--- a/view/page/bookCardModal.html
+++ b/view/page/bookCardModal.html
@@ -12,6 +12,8 @@
                 <p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p>
                 <p class="card-text"> Auteur : <?php echo $findAutName($database->getAuthorById($details['idAuthor'])) ?></p>
                 <p class="card-text"> Année : <?php echo $details['booYearEdited'] ?></p>
+                <p class="card-text"> Catégorie : <?php echo ($database->getCategoryById($details['idCategory']))['catName'] ?></p>
+                <p class="card-text"> Editeur : <?php echo ($database->getEditorById($details['idEditor']))['ediName'] ?></p>
                 <p class="card-text"> Nombre de pages : <?php echo $details['booNbrPages'] ?></p>
                 <p class="card-text"> Résumé : <?php echo $details['booSummary'] ?></p>
                 <p class="card-text"> Appréciation :
