Accès bloqué pour les membres non connecté

--- a/view/footer.html
+++ b/view/footer.html
@@ -4,6 +4,9 @@
             <p class="float-right">
                 <a href="../controller/home.php">Retour à l'accueil</a>
             </p>
+            <p class="float-left">
+                Créé par Simon Guggisberg & Julien Leresche / Contact : julien.leresche@eduvaud.ch
+            </p>
         </div>
     </footer>
     <script>
