--- a/view/page/evaluationModal.html
+++ b/view/page/evaluationModal.html
@@ -13,9 +13,13 @@
                         <label for="evaluation">Note de l'ouvrage</label>
                         <select name="note" id="evaluation">
                             <option id="evaluation" value="1" >1</option>
+                            <option id="evaluation" value="1.5" >1.5</option>
                             <option id="evaluation" value="2" >2</option>
+                            <option id="evaluation" value="2.5" >2.5</option>
                             <option id="evaluation" value="3" >3</option>
+                            <option id="evaluation" value="3.5" >3.5</option>
                             <option id="evaluation" value="4" >4</option>
+                            <option id="evaluation" value="4.5" >4.5</option>
                             <option id="evaluation" value="5" >5</option>
                         </select>
                     </div>
