--- a/view/page/bookCard.html
+++ b/view/page/bookCard.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p>
             <p class="card-text"> Auteur : <?php echo $findAutName($database->getAuthorById($details['idAuthor'])) ?></p>
-            <p class="card-text"> Année : <?php echo $details['booYearEdited']?></p>
+            <p class="card-text"> Ajouté par : <a href="<?php echo "userDetail.php?idUser=" . $details['idUser'] ?>"><?php echo $database->getUsernameByUserId($details['idUser']) ?></a></p>
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#id<?php echo $details['idBook'] ?>">Détails ouvrage</button>
