--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -15,7 +15,7 @@
                 <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                     <div class="col p-4 d-flex flex-column position-static">
                         <h3 class="mb-0">Appréciation globale :</h3>
-                        <div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5'; } ?></div>
+                        <div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5  (' . count($evaluations) . ' notes)'; } ?></div>
                         <?php displayRatingStars($averageNote); ?>
                     </div>
                 </div>
