--- a/view/page/addBook.html
+++ b/view/page/addBook.html
@@ -14,9 +14,11 @@
                                     <label for="category">Categorie : </label>
                                     <select class="form-control" id="category" name="category">
                                         <option value="Choose" selected>Choisir</option>
-                                        <option value="book">Livre</option>
-                                        <option value="comic">Comic</option>
-                                        <option value="manga">Manga</option>
+                                        <?php
+                                        foreach ($categories as $category) {
+                                            echo '<option value="' . $category['catName'] . '">' . $category['catName'] . '</option>';
+                                        }
+                                        ?>
                                     </select>
                                 </div>
                                 <div class="form-group">
