--- a/view/page/peutNormalementEtreSupprimee.html
+++ b/view/page/peutNormalementEtreSupprimee.html
@@ -38,15 +38,15 @@
                 </div>
                 <div class="form-group">
                     <label for="picture">Picture :</label>
-                    <input class="form-controll-file" type="file" name="picture" id="picture">
+                    <input class="form-control-file" type="file" name="picture" id="picture">
                 </div>
                 <div class="form-group">
                     <label for="excerpt">Excerpt : </label>
-                    <input class="form-controll-file" type="file" name="excerpt" id="excerpt">
+                    <input class="form-control-file" type="file" name="excerpt" id="excerpt">
                 </div>
                 <div class="form-group">
                     <label for="summary">Summary : </label>
-                    <textarea class="form-contro" id="summary" name="summary" rows="4" cols="50" maxlength="200"
+                    <textarea class="form-control" id="summary" name="summary" rows="4" cols="50" maxlength="200"
                             placeholder="Write a short summary for the book"></textarea>
                 </div>
                 <p>
