--- a/view/page/addBook.html
+++ b/view/page/addBook.html
@@ -4,63 +4,65 @@
             <div class="card text-left">
                 <div class="card bg-light">
                     <div class="card-header"><h3 class="card-title">Ajouter un livre</h3></div>
-                        <div class="card-body">
-                            <form method="post" action="addingBook.php" enctype="multipart/form-data">
-                                <div class="form-group">
-                                    <label for="title">Titre : </label>
-                                    <input class="form-control" type="text" id="title" name="title">
-                                </div>
-                                <div class="form-group">
-                                    <label for="category">Categorie : </label>
-                                    <select class="form-control" id="category" name="category">
-                                        <option value="Choose" selected>Choisir</option>
-                                        <?php
+                    <div class="card-body">
+                        <form method="post" action="addingBook.php" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <label for="title">Titre : </label>
+                                <input class="form-control" type="text" id="title" name="title">
+                            </div>
+                            <div class="form-group">
+                                <label for="category">Categorie : </label>
+                                <select class="form-control" id="category" name="category">
+                                    <option value="Choose" selected>Choisir</option>
+                                    <?php
                                         foreach ($categories as $category) {
-                                            echo '<option value="' . $category['catName'] . '">' . $category['catName'] . '</option>';
-                                        }
-                                        ?>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="numberPages">Nombre de pages : </label>
-                                    <input class="form-control" type="number" id="numberPages" name="numberPages" min="1">
-                                </div>
-                                <div class="form-group">
-                                    <label for="authorName">Prénom de l'auteur : </label>
-                                    <input class="form-control" type="text" id="authorName" name="authorName">
-                                </div>
-                                <div class="form-group">
-                                    <label for="authorSurname">Nom de l'auteur : </label>
-                                    <input class="form-control" type="text" id="authorSurname" name="authorSurname">
-                                </div>
-                                <div class="form-group">
-                                    <label for="editor">Editeur : </label>
-                                    <input class="form-control" type="text" id="editor" name="editor">
-                                </div>
-                                <div class="form-group">
-                                    <label for="year">Année : </label>
-                                    <input type="number" id="year" name="year" max="2020">
-                                </div>
-                                <div class="form-group">
-                                    <label for="picture">Photo de couverture :</label>
-                                    <input class="form-controll-file" type="file" name="picture" id="picture">
-                                </div>
-                                <div class="form-group">
-                                    <label for="excerpt">Echantillon : </label>
-                                    <input class="form-controll-file" type="file" name="excerpt" id="excerpt">
-                                </div>
-                                <div class="form-group">
-                                    <label for="summary">Résumé : </label>
-                                    <textarea class="form-contro" id="summary" name="summary" rows="4" cols="50" maxlength="200"
-                                            placeholder="Write a short summary for the book"></textarea>
-                                </div>
-                                <p>
-                                    <input type="submit" name="btnSubmit" value="Ajouter" class="btn btn-primary"/>
-                                </p>
-                            </form>
-                        </div>
+                                            echo '<option value="' . $category['catName'] . '">' . $category['catName']
+                                    . '</option>';
+                                    }
+                                    ?>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="numberPages">Nombre de pages : </label>
+                                <input class="form-control" type="number" id="numberPages" name="numberPages" min="1">
+                            </div>
+                            <div class="form-group">
+                                <label for="authorName">Prénom de l'auteur : </label>
+                                <input class="form-control" type="text" id="authorName" name="authorName">
+                            </div>
+                            <div class="form-group">
+                                <label for="authorSurname">Nom de l'auteur : </label>
+                                <input class="form-control" type="text" id="authorSurname" name="authorSurname">
+                            </div>
+                            <div class="form-group">
+                                <label for="editor">Editeur : </label>
+                                <input class="form-control" type="text" id="editor" name="editor">
+                            </div>
+                            <div class="form-group">
+                                <label for="year">Année : </label>
+                                <input type="number" id="year" name="year" max="2020">
+                            </div>
+                            <div class="form-group">
+                                <label for="picture">Photo de couverture :</label>
+                                <input class="form-controll-file" type="file" name="picture" id="picture">
+                            </div>
+                            <div class="form-group">
+                                <label for="excerpt">Echantillon : </label>
+                                <input class="form-controll-file" type="file" name="excerpt" id="excerpt">
+                            </div>
+                            <div class="form-group">
+                                <label for="summary">Résumé : </label>
+                                <textarea class="form-contro" id="summary" name="summary" rows="4" cols="50"
+                                          maxlength="200"
+                                          placeholder="Write a short summary for the book"></textarea>
+                            </div>
+                            <p>
+                                <input type="submit" name="btnSubmit" value="Ajouter" class="btn btn-primary"/>
+                            </p>
+                        </form>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
