--- a/view/page/home.html
+++ b/view/page/home.html
@@ -2,14 +2,15 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1>Bibliothèque en ligne</h1>
-            <p class="lead text-muted">Ce site répertorie des oeuvres littéraires de tous les horizons, des lecteurs passionés et avides de bouquins, ainsi que leurs appréciations.</p>
+            <p class="lead text-muted">Ce site répertorie des oeuvres littéraires de tous les horizons, des lecteurs
+                passionés et avides de bouquins, ainsi que leurs appréciations.</p>
             <p>
                 <a href="<?php echo $buttonPageName ?>" class="btn btn-primary my-2"><?php echo $buttonTitle ?></a>
                 <?php
                     if(isset($_SESSION["isConnected"]))
                     {
                         echo '<a href="addBook.php" class="btn btn-secondary my-2">Ajouter un ouvrage</a>';
-                    }
+                }
                 ?>
             </p>
         </div>
