added html headers

--- a/view/head.html
+++ b/view/head.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : head to be used for MVC
+-->
 <!doctype html>
 <html lang="fr">
 <head>
