--- a/view/header.html
+++ b/view/header.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : header to be used for MVC
+-->
 <body>
 <header>
     <div class="navbar navbar-dark bg-dark shadow-sm">
@@ -6,8 +11,8 @@
                 <strong><h1><?php echo $title?></h1></strong>
             </a>
             <?php
-                    $displayLoginSection();
-                ?>
+                $displayLoginSection();
+            ?>
         </div>
     </div>
 </header>
