--- a/view/page/bookCardModal.html
+++ b/view/page/bookCardModal.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for a book card's modal
+-->
 <div class="modal fade" id="id<?php echo $details['idBook'] ?>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
