--- a/view/footer.html
+++ b/view/footer.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : footer to be used for MVC
+-->
 </main>
 <footer class="text-muted">
     <div class="container">
