--- a/view/page/bookCard.html
+++ b/view/page/bookCard.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for a book card
+-->
 <div class="col-md-4">
     <div class="card mb-4 shadow-sm">
         <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="Couverture du livre">
