--- a/view/page/categorySelection.html
+++ b/view/page/categorySelection.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for selection of category of books
+-->
 <form class="d-flex justify-content-center" action="booksList.php" method="post">
     <div class="form-group">
         <label for="cat">Catégorie</label>
