--- a/view/page/evaluationModal.html
+++ b/view/page/evaluationModal.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for the modal displaying the evaluation of a book
+-->
 <div class="modal fade" id="rating" data-backdrop="static" data-keyboard="false" tabindex="-1"
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
