--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for viewing evaluations per book
+-->
 <div class="album py-5 bg-light">
     <div class="container">
         <div class="row mb-2">
