--- a/view/page/evaluationsListModal.html
+++ b/view/page/evaluationsListModal.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for the displaying the list of evalutions' modal
+-->
 <div class="modal fade" id="ratingList" data-backdrop="static" data-keyboard="false" tabindex="-1"
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
@@ -11,19 +16,13 @@
             <div class="modal-body">
                 <div class="list-group" id="myList" role="tablist">
                     <?php
-                        if(count($evaluations) > 0)
-                    {
-                    foreach($evaluations as $evaluation)
-                    {
-                    echo '<a class="list-group-item list-group-item-action" data-toggle="list"
-                             href="#id' . $evaluation[" idUserEvaluer"] . '" role="tab">' .
-                    $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] .
-                    '/5</a>';
+                        if(count($evaluations) > 0) {
+                        foreach($evaluations as $evaluation) {
+                            echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation[" idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
+                        }
                     }
-                    }
-                    else
-                    {
-                    echo 'Aucune appréciations';
+                    else {
+                        echo 'Aucune appréciation';
                     }
                     ?>
                 </div>
