--- a/view/page/forbiddenAccessMessage.html
+++ b/view/page/forbiddenAccessMessage.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code when viewing an unauthorized page
+-->
 <main role="main">
     <section class="jumbotron text-center">
         <div class="container">
