--- a/view/page/home.html
+++ b/view/page/home.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : html code for homepage
+-->
 <main role="main">
     <section class="jumbotron text-center">
         <div class="container">
