--- a/view/page/peutNormalementEtreSupprimee.html
+++ b/view/page/peutNormalementEtreSupprimee.html
@@ -1,3 +1,8 @@
+<!--
+Authors : Julien Leresche & Simon Guggisberg
+Date : 02.01.2021
+Description : TODO
+-->
 <div class="col-md-4">
     <div class="card bg-light mb-3">
         <div class="card-header"><h3 class="card-title">Add a book</h3></div>
