--- a/view/page/categorySelection.html
+++ b/view/page/categorySelection.html
@@ -8,12 +8,11 @@ Description : html code for selection of category of books
         <label for="cat">Catégorie</label>
         <select class="form-control" name="category" id="cat">
             <option value="0">Tout</option>
-            <?php foreach($database->getTable("t_category") as $category)
-            {
-            echo '
-            <option value="' . $category['idCategory'] . '">' . $category['catName'] . '</option>
-            ';
-            }
+            <?php 
+                foreach($database->getTable("t_category") as $category)
+                {
+                    echo '<option value="' . $category['idCategory'] . '">' . $category['catName'] . '</option>';
+                }
             ?>
         </select>
         <input type="submit" class="btn btn-sm btn-primary" value="Trier">
