some more fixes

--- a/view/page/evaluationsListModal.html
+++ b/view/page/evaluationsListModal.html
@@ -18,7 +18,7 @@ Description : html code for the displaying the list of evalutions' modal
                     <?php
                         if(count($evaluations) > 0) {
                         foreach($evaluations as $evaluation) {
-                            echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
+                            echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUser"] . '" role="tab">' . $database->getUserById($evaluation["idUser"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
                         }
                     }
                     else {
@@ -30,7 +30,7 @@ Description : html code for the displaying the list of evalutions' modal
                     <?php
                         foreach($evaluations as $evaluation)
                         {
-                            echo '<div class="tab-pane overflow-auto" id="id' . $evaluation["idUserEvaluer"] . '" role="tabpanel">
+                            echo '<div class="tab-pane overflow-auto" id="id' . $evaluation["idUser"] . '" role="tabpanel">
                     ' . $evaluation["evaRemark"] . '
                 </div>
                 ';
