--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -39,8 +39,8 @@ Description : html code for viewing evaluations per book
                             foreach($selectedEvaluations as $evaluation)
                             {
                             echo '<a class="list-group-item list-group-item-action" data-toggle="list"
-                                     href="#idNumber' . $evaluation["idUserEvaluer"] . '" role="tab">' .
-                            $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' .
+                                     href="#idNumber' . $evaluation["idUser"] . '" role="tab">' .
+                            $database->getUserById($evaluation["idUser"])["usePseudo"] . ' : ' .
                             $evaluation["evaNote"] . '/5</a>';
                             }
                             }
@@ -54,7 +54,7 @@ Description : html code for viewing evaluations per book
                             <?php
                                 foreach($selectedEvaluations as $evaluation)
                                 {
-                                    echo '<div class="tab-pane overflow-auto" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel">
+                                    echo '<div class="tab-pane overflow-auto" id="idNumber' . $evaluation["idUser"] . '" role="tabpanel">
                             ' . $evaluation["evaRemark"] . '
                         </div>
                         ';
@@ -71,7 +71,7 @@ Description : html code for viewing evaluations per book
                                     $alreadyEvaluated=0;
                                     foreach($evaluations as $evaluation)
                                     {
-                                        if($evaluation["idUserEvaluer"] == $database->
+                                        if($evaluation["idUser"] == $database->
                         userExistsAt($_SESSION["username"]))
                         {
                         $alreadyEvaluated=1;
