removed unnecessary files, minified html for now

--- a/view/header.html
+++ b/view/header.html
@@ -1,18 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : header to be used for MVC
--->
-<body>
-<header>
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <strong><h1><?php echo $title?></h1></strong>
-            </a>
-            <?php
-                $displayLoginSection();
-            ?>
-        </div>
-    </div>
-</header>
+<body> <header><div class="navbar navbar-dark bg-dark shadow-sm"><div class="container d-flex justify-content-between"> <a href="#" class="navbar-brand d-flex align-items-center"> <strong><h1><?php echo $title?></h1></strong> </a> <?php $displayLoginSection(); ?></div></div> </header>
