--- a/view/page/evaluationsListModal.html
+++ b/view/page/evaluationsListModal.html
@@ -1,43 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : html code for the displaying the list of evalutions' modal
--->
-<div class="modal fade" id="ratingList" data-backdrop="static" data-keyboard="false" tabindex="-1"
-     aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Liste des appréciations</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="list-group" id="myList" role="tablist">
-                    <?php
-                        if(count($evaluations) > 0) {
-                        foreach($evaluations as $evaluation) {
-                            echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUser"] . '" role="tab">' . $database->getUserById($evaluation["idUser"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>';
-                        }
-                    }
-                    else {
-                        echo 'Aucune appréciation';
-                    }
-                    ?>
-                </div>
-                <div class="tab-content no-gutters border rounded">
-                    <?php
-                        foreach($evaluations as $evaluation)
-                        {
-                            echo '<div class="tab-pane overflow-auto" id="id' . $evaluation["idUser"] . '" role="tabpanel">
-                    ' . $evaluation["evaRemark"] . '
-                </div>
-                ';
-                }
-                ?>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
+<div class="modal fade" id="ratingList" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"><div class="modal-dialog"><div class="modal-content"><div class="modal-header"><h5 class="modal-title" id="staticBackdropLabel">Liste des appréciations</h5> <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button></div><div class="modal-body"><div class="list-group" id="myList" role="tablist"> <?php if(count($evaluations) > 0) { foreach($evaluations as $evaluation) { echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#id' . $evaluation["idUser"] . '" role="tab">' . $database->getUserById($evaluation["idUser"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>'; } } else { echo 'Aucune appréciation'; } ?></div><div class="tab-content no-gutters border rounded"> <?php foreach($evaluations as $evaluation) { echo '<div class="tab-pane overflow-auto" id="id' . $evaluation["idUser"] . '" role="tabpanel"> ' . $evaluation["evaRemark"] . '</div> '; } ?></div></div></div></div></div>
