--- a/view/head.html
+++ b/view/head.html
@@ -1,48 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : head to be used for MVC
--->
-<!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Bibliothèque d'ouvrages</title>
-
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <!-- Stylesheet for the icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!-- Custom styles for the website -->
-    <style>
-        .checked {
-            color: orange;
-        }
-
-        .jumbotron {
-            margin-bottom: 0;
-        }
-
-        .col-md-4 {
-            height: 100%;
-        }
-
-        .list-group {
-            margin-bottom: 2rem;
-        }
-
-        .tab-content {
-            border: solid 1px;
-            margin-bottom: 2rem;
-        }
-
-        img {
-            width: 100%;
-            height: 300px;
-        }
-    </style>
-</head>
+<!doctype html><html lang="fr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><title>Bibliothèque d'ouvrages</title><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><style>.checked{color:orange}.jumbotron{margin-bottom:0}.col-md-4{height:100%}.list-group{margin-bottom:2rem}.tab-content{border:solid 1px;margin-bottom:2rem}img{width:100%;height:300px}</style></head>
