--- a/view/page/bookCardLogout.html
+++ b/view/page/bookCardLogout.html
@@ -1,15 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : html code for the book if user is logged out
--->
-<div class="col-md-4">
-    <div class="card mb-4 shadow-sm">
-        <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="Couverture du livre">
-        <div class="card-body">
-            <p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p>
-            <p class="card-text"> Auteur : <?php echo $findAutName($database->getAuthorById($details['idAuthor'])) ?></p>
-            <p class="card-text"> Ajouté par : <?php echo $database->getUsernameByUserId($details['idUser']) ?></p>
-        </div>
-    </div>
-</div>
+<div class="col-md-4"><div class="card mb-4 shadow-sm"> <img src="../userContent/images/<?php echo $details['booCoverLink'] ?>" alt="Couverture du livre"><div class="card-body"><p class="card-text"> Titre : <?php echo $details['booTitle'] ?></p><p class="card-text"> Auteur : <?php echo $findAutName($database->getAuthorById($details['idAuthor'])) ?></p><p class="card-text"> Ajouté par : <?php echo $database->getUsernameByUserId($details['idUser']) ?></p></div></div></div>
