--- a/view/page/forbiddenAccessMessage.html
+++ b/view/page/forbiddenAccessMessage.html
@@ -1,17 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : html code when viewing an unauthorized page
--->
-<main role="main">
-    <section class="jumbotron text-center">
-        <div class="container">
-            <div class="card text-left">
-                <div class="card bg-light text-danger">
-                    <div class="card-body">
-                        <h1>Vous devez être connecté pour accéder à cette section !</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<main role="main"> <section class="jumbotron text-center"><div class="container"><div class="card text-left"><div class="card bg-light text-danger"><div class="card-body"><h1>Vous devez être connecté pour accéder à cette section !</h1></div></div></div></div> </section>
