--- a/view/page/evaluations.html
+++ b/view/page/evaluations.html
@@ -1,102 +1,1 @@
-<!--
-Authors : Julien Leresche & Simon Guggisberg
-Date : 02.01.2021
-Description : html code for viewing evaluations per book
--->
-<div class="album py-5 bg-light">
-    <div class="container">
-        <div class="row mb-2">
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <img src="../userContent/images/<?php echo $selectedBook['booCoverLink'] ?>"
-                         alt="Couverture du livre">
-                    <div class="card-body">
-                        <p class="card-text"> Titre : <?php echo $selectedBook['booTitle'] ?></p>
-                        <p class="card-text"> Auteur : <?php echo findAutName($database->getAuthorById($selectedBook['idAuthor'])) ?></p>
-                        <p class="card-text"> Année : <?php echo $selectedBook['booYearEdited'] ?></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <h3 class="mb-0">Appréciation globale :</h3>
-                        <div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5 (' .
-                            count($evaluations) . ' notes)'; } ?>
-                        </div>
-                        <?php displayRatingStars($averageNote); ?>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <h3 class="mb-0">Commentaires sélectionnés :</h3>
-                        <div class="list-group" id="myList" role="tablist">
-                            <?php
-                                if(count($selectedEvaluations) > 0)
-                            {
-                            foreach($selectedEvaluations as $evaluation)
-                            {
-                            echo '<a class="list-group-item list-group-item-action" data-toggle="list"
-                                     href="#idNumber' . $evaluation["idUserEvaluer"] . '" role="tab">' .
-                            $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' .
-                            $evaluation["evaNote"] . '/5</a>';
-                            }
-                            }
-                            else
-                            {
-                            echo 'Aucun commentaires';
-                            }
-                            ?>
-                        </div>
-                        <div class="tab-content no-gutters border rounded">
-                            <?php
-                                foreach($selectedEvaluations as $evaluation)
-                                {
-                                    echo '<div class="tab-pane overflow-auto" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel">
-                            ' . $evaluation["evaRemark"] . '
-                        </div>
-                        ';
-                        }
-                        ?>
-                    </div>
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <div class="btn-group mr-2" role="group" aria-label="first">
-                            <a data-toggle="modal" data-target="#ratingList" class="btn btn-primary">Voir les notes</a>
-                        </div>
-                        <?php
-                                if(isset($_SESSION["isConnected"]))
-                                {
-                                    $alreadyEvaluated=0;
-                                    foreach($evaluations as $evaluation)
-                                    {
-                                        if($evaluation["idUserEvaluer"] == $database->
-                        userExistsAt($_SESSION["username"]))
-                        {
-                        $alreadyEvaluated=1;
-                        }
-                        }
-                        if($alreadyEvaluated == 0)
-                        {
-                        echo '
-                        <div class="btn-group mr-2" role="group" aria-label="second">
-                            <a data-toggle="modal" data-target="#rating" class="btn btn-secondary">Donner son avis</a>
-                        </div>
-                        ';
-                        } else {
-                        echo '
-                        <div class="btn-group mr-2" role="group" aria-label="second">
-                            <a data-toggle="modal" data-target="#rating" class="btn btn-secondary">Modifier son avis</a>
-                        </div>
-                        ';
-                        }
-                        }
-                        ?>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
+<div class="album py-5 bg-light"><div class="container"><div class="row mb-2"><div class="col-md-4"><div class="card mb-4 shadow-sm"> <img src="../userContent/images/<?php echo $selectedBook['booCoverLink'] ?>" alt="Couverture du livre"><div class="card-body"><p class="card-text"> Titre : <?php echo $selectedBook['booTitle'] ?></p><p class="card-text"> Auteur : <?php echo findAutName($database->getAuthorById($selectedBook['idAuthor'])) ?></p><p class="card-text"> Année : <?php echo $selectedBook['booYearEdited'] ?></p></div></div></div><div class="col-md-4"><div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"><div class="col p-4 d-flex flex-column position-static"><h3 class="mb-0">Appréciation globale :</h3><div class="mb-1 text-muted"><?php if($averageNote >0 ){ echo $averageNote . '/5 (' . count($evaluations) . ' notes)'; } ?></div> <?php displayRatingStars($averageNote); ?></div></div></div><div class="col-md-4"><div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"><div class="col p-4 d-flex flex-column position-static"><h3 class="mb-0">Commentaires sélectionnés :</h3><div class="list-group" id="myList" role="tablist"> <?php if(count($selectedEvaluations) > 0) { foreach($selectedEvaluations as $evaluation) { echo '<a class="list-group-item list-group-item-action" data-toggle="list" href="#idNumber' . $evaluation["idUserEvaluer"] . '" role="tab">' . $database->getUserById($evaluation["idUserEvaluer"])["usePseudo"] . ' : ' . $evaluation["evaNote"] . '/5</a>'; } } else { echo 'Aucun commentaires'; } ?></div><div class="tab-content no-gutters border rounded"> <?php foreach($selectedEvaluations as $evaluation) { echo '<div class="tab-pane overflow-auto" id="idNumber' . $evaluation["idUserEvaluer"] . '" role="tabpanel"> ' . $evaluation["evaRemark"] . '</div> '; } ?></div><div class="btn-group" role="group" aria-label="Basic example"><div class="btn-group mr-2" role="group" aria-label="first"> <a data-toggle="modal" data-target="#ratingList" class="btn btn-primary">Voir les notes</a></div> <?php if(isset($_SESSION["isConnected"])) { $alreadyEvaluated=0; foreach($evaluations as $evaluation) { if($evaluation["idUserEvaluer"] == $database-> userExistsAt($_SESSION["username"])) { $alreadyEvaluated=1; } } if($alreadyEvaluated == 0) { echo '<div class="btn-group mr-2" role="group" aria-label="second"> <a data-toggle="modal" data-target="#rating" class="btn btn-secondary">Donner son avis</a></div> '; } else { echo '<div class="btn-group mr-2" role="group" aria-label="second"> <a data-toggle="modal" data-target="#rating" class="btn btn-secondary">Modifier son avis</a></div> '; } } ?></div></div></div></div></div></div></div>
